# ebs-hal-uc-msp430f5xx

./: CMakeLists.txt  README.md  all.h  core.h  core_impl.c  core_impl.h  entropy_impl.c  gpio.h  gpio_impl.h  id.h  id_impl.c  id_impl.h  spi_handlers.c  spi_handlers.h  spi_impl.c  spi_impl.h  timer.h  timer_handlers.c  timer_impl.c  timer_impl.h  types.h  uart.h  uart_handlers.c  uart_handlers.h  uart_impl.c  uart_impl.h  uc.h  uc_map_impl.h  uc_msp430f5529.h  usb.h  usbcdc.h  usbcdc_impl.c  usbcdc_impl.h
impl/: CMakeLists.txt  core_impl.c  core_impl.h  timer_impl.h  uart_handlers.c  uart_impl.c  uart_impl.h  usbcdc_impl.c  usbcdc_impl.h
